[gd_scene load_steps=2 format=3 uid="uid://by5bcofkf83ks"]

[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/GraphTabManager/DomainGraph/GraphManager.gd" id="1_lhp4v"]

[node name="DomainGraph" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
grid_pattern = 1
right_disconnects = true
show_zoom_label = true
show_arrange_button = false
script = ExtResource("1_lhp4v")

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_connection_to_empty"]
[connection signal="copy_nodes_request" from="." to="." method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="end_node_move" from="." to="." method="_on_end_node_move"]
[connection signal="paste_nodes_request" from="." to="." method="_on_paste_nodes_request"]
[connection signal="popup_request" from="." to="." method="_on_popup_request"]
